# plane-be

./: .env  Dockerfile  Function_Procedure.sql  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
app/: __init__.py  deps.py  exceptions.py  main.py
app/api/: deps.py
app/core/: config.py  jwt.py  security.py
app/crud/: airport.py  booking_ticket.py  employee.py  flight.py  flight_route.py  passenger.py  phieudatcho_vemaybay.py  regulation.py  taikhoannhanvien.py  ticket.py  ticket_class.py
app/databases/: __init__.py  session.py
app/db/: base.py  init_db.py  session.py
app/functions/: booking_management.py  flight_lookup.py  flight_management.py  flight_ticket_management.py  regulations.py  revenue_report.py
app/models/: Airport.py  Booking_Ticket.py  Employee.py  Flight.py  FlightDetail.py  FlightRoute.py  Rules.py  TicketClass.py  TicketClassStatistics.py  TicketPrice.py  __init__.py  booking.py  chitietchuyenbay.py  chuyenbay.py  dongia.py  flight.py  hangve.py  passenger.py  phieudatcho_vemaybay.py  regulation.py  report.py  rule.py  rules.py  sanbay.py  taikhoannhanvien.py  thongkehangvechuyenbay.py  ticket.py  tuyenbay.py
app/routers/: __init__.py  airport.py  auth.py  booking_management.py  booking_ticket.py  employee.py  flight.py  flight_lookup.py  flight_management.py  flight_ticket_management.py  flightroute.py  phieudatcho_vemaybay.py  regulations.py  revenue_report.py  taikhoannhanvien.py
app/schemas/: Airport.py  Employee.py  (+27 more)
database_postgresql/: Database.sql  README.md  Trigger.sql
(+17 files in other folders)
